...
              'arrowSize': 1.0,
              'arrowColor': '#0088ffff',
            },
          ),
          LuminaBlueprintComponent(
            id: 'spring_arm',
            name: 'CameraBoom',
            type: 'LuminaSpringArmComponent',
            parentId: 'root_capsule',
            properties: {
              'location': [0.0, 0.0, 0.0],
              'rotation': [0.0, 0.0, 0.0],
              'scale': [1.0, 1.0, 1.0],
...
